# SDFont

./: CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt
include/: free_type_utilities.hpp  generator.hpp  generator_config.hpp  generator_option_parser.hpp  glyph.hpp  internal_glyph_for_gen.hpp  metrics_parser.hpp  runtime_helper.hpp  sdfont_generator.hpp  sdfont_generator_config.hpp  sdfont_generator_option_parser.hpp  sdfont_internal_glyph_for_generator.hpp  sdfont_metrics_parser.hpp  sdfont_runtime_helper.hpp  sdfont_texture_loader.hpp  sdfont_vanilla_shader_manager.hpp  shader_manager.hpp  texture_loader.hpp  vanilla_shader_manager.hpp
include/sdfont/: char_map.hpp  free_type_utilities.hpp  glyph.hpp  util.hpp
include/sdfont/generator/: free_type_utilities.hpp  generator.hpp  generator_config.hpp  generator_option_parser.hpp  internal_glyph_for_generator.hpp  internal_glyph_thread_driver.hpp  png_loader.hpp  sdfont_free_type_utilities.hpp  sdfont_generator.hpp  sdfont_generator_option_parser.hpp  sdfont_internal_glyph_for_generator.hpp  thread_synchronizer.hpp
include/sdfont/runtime_helper/: metrics_parser.hpp  runtime_helper.hpp  sdfont_metrics_parser.hpp  sdfont_runtime_helper.hpp  sdfont_shader_manager.hpp  sdfont_vanilla_shader_manager.hpp  vanilla_shader_manager.hpp
shaders/: VanillaSignedDistFontFragment.glsl  VanillaSignedDistFontVertex.glsl
src_bin/: command_line_generator.cpp  demo.cpp  demo.cpp~  sdfont_demo.cpp  sdfont_generator.cpp
src_commandline/: generator.cpp  sdfont_generator.cpp
src_demo/: demo.cpp  sdfont_demo.cpp
src_lib/: CMakeLists.txt  free_type_utilities.cpp  generator.cpp  generator_config.cpp  generator_option_parser.cpp  internal_glyph_for_gen.cpp  metrics_parser.cpp  runtime_helper.cpp  sdfont_free_type_utilities.cpp  sdfont_generator.cpp  sdfont_generator_config.cpp  sdfont_generator_option_parser.cpp  sdfont_internal_glyph_for_generator.cpp  sdfont_metrics_parser.cpp  sdfont_runtime_helper.cpp  sdfont_shader_manager.cpp  sdfont_texture_loader.cpp  sdfont_vanilla_shader_manager.cpp  shader_manager.cpp  texture_loader.cpp  vanilla_shader_manager.cpp
src_lib_generator/: free_type_utilities.cpp  generator.cpp  generator_config.cpp  generator_option_parser.cpp  internal_glyph_for_generator.cpp  internal_glyph_thread_driver.cpp  png_loader.cpp  sdfont_free_type_utilities.cpp  sdfont_generator.cpp  sdfont_generator_config.cpp  sdfont_generator_option_parser.cpp  sdfont_internal_glyph_for_generator.cpp
src_lib_runtime_helper/: metrics_parser.cpp  runtime_helper.cpp  sdfont_metrics_parser.cpp  sdfont_runtime_helper.cpp  sdfont_shader_manager.cpp  sdfont_texture_loader.cpp  sdfont_vanilla_shader_manager.cpp  shader_manager.cpp  texture_loader.cpp  vanilla_shader_manager.cpp
